--- a/desktop.ini
+++ b/desktop.ini
@@ -1,5 +1,5 @@
 [.ShellClassInfo]
-IconResource=C:\WINDOWS\System32\SHELL32.dll,232
+IconResource=C:\Windows\System32\SHELL32.dll,25
 [ViewState]
 Mode=
 Vid=
