--- a/_Auth/jwt-auth/package.json
+++ b/_Auth/jwt-auth/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "download-docx",
+  "name": "jwt-auth",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -10,10 +10,7 @@
   "dependencies": {
     "axios": "^0.26.0",
     "core-js": "^3.6.5",
-    "docx": "^7.3.0",
-    "file-saver": "^2.0.5",
     "vue": "^2.6.11",
-    "vue-json-excel": "^0.3.0",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
