--- a/_Download-files/xsls/package.json
+++ b/_Download-files/xsls/package.json
@@ -13,9 +13,9 @@
     "docx": "^7.3.0",
     "file-saver": "^2.0.5",
     "vue": "^2.6.11",
-    "vue-json-excel": "^0.3.0",
     "vue-router": "^3.2.0",
-    "vuex": "^3.4.0"
+    "vuex": "^3.4.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.15",
